--- a/Android/FamilyParking/app/src/main/res/layout/fragment_map.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/fragment_map.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipe_map"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
